--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
     "unhead": "^1.9.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vuetify": "^3.6.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
@@ -22,6 +24,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-router": "^0.8.6",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vite-plugin-vue-layouts": "^0.11.0"
   }
 }
